--- a/index.html
+++ b/index.html
@@ -29,23 +29,23 @@
           </div>
           <div>
             <p class="mb-0"><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://maps.app.goo.gl/GCZDYThYj8mfrLxi7">Location</a></p>
-            <p class="mb-0"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="trangnguyenanhthuan@gmail.com">Email</a></p>
+            <p class="mb-0"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="mailto:trangnguyenanhthuan@gmail.com">Email</a></p>
             <p class="mb-0"><i class="fab fa-fw fa-github" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://github.com/tranganhthuan">Github</a></p>
-            <p class="mb-0"><i class="fas fa-fw fa-code" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://github.com/tranganhthuan">Leetcode</a></p>
+            <p class="mb-0"><i class="fas fa-fw fa-code" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://leetcode.com/u/trangnguyenanhthuan/">Leetcode</a></p>
             <p class="mb-0"><i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://scholar.google.com.vn/citations?view_op=list_works&hl=vi&user=L-eZtsQAAAAJ">Scholar</a></p>
           </div>
         </div>
         <div class="col-10 mt-2">
-          <h3 class="text-dark-emphasis pb-3"> <strong>🙌🏻 Hi, I’m Thuan!</strong></h3>
+          <h2 class="text-dark-emphasis pb-3"> 🙌🏻 Hi, I’m Thuan! </h2>
           
           <p class="blockquote">👨🏻‍🎓 I have a Bachelor Degree in IT at RMIT University.</p>
           <p class="blockquote">👨🏻‍💻 I was an AI Resident at FPT AIC.</p>
           <p class="blockquote">🔬 My main research topic are 3D Vision, Generative Model, Language-Vision Modelling.</p>
           <p class="blockquote">🎯 I’m currently seeking for PhD Position in this field.</p>
-          <p class="blockquote text-secondary"> Further Details: 
-            [<a class="link-underline link-underline-opacity-0" href="">CV</a>] 
-            [<a class="link-underline link-underline-opacity-0" href="">IELTS</a>] 
-            [<a class="link-underline link-underline-opacity-0" href="">Scholarship</a>]  
+          <p class="blockquote text-secondary"> <span class="blockquote-footer"></span> Further Details: 
+            [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/CV.pdf">CV</a>] 
+            [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/IELTS.pdf">IELTS</a>] 
+            [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/Scholarship.pdf">Scholarship</a>]  
           </p>       
 
           <h3 class="text-dark-emphasis pb-3"> 📚 Publications </h3>
@@ -54,11 +54,11 @@
             <div class="card-body">
               <h5 class="card-title">E(3)-Equivariant Mesh Neural Networks</h5>
               <h6 class="card-subtitle text-body-secondary"><strong>Thuan N.A. Trang*</strong>, Khang Nhat Ngo*, Daniel Levy*, Thieu N. Vo, Siamak Ravanbakhsh, Truong Son Hy</h6>
-              <p class="card-text text-secondary mb-0">- AISTAT 2024</p>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Paper</a>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Abstract</a>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Code</a>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Poster</a>
+              <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span> AISTAT 2024</p>
+              <a href="https://proceedings.mlr.press/v238/anh-trang24a/anh-trang24a.pdf" class="card-link link-underline link-underline-opacity-0">Paper</a>
+              <a href="https://proceedings.mlr.press/v238/anh-trang24a.html" class="card-link link-underline link-underline-opacity-0">Abstract</a>
+              <a href="https://github.com/HySonLab/EquiMesh" class="card-link link-underline link-underline-opacity-0">Code</a>
+              <a href="https://people.cs.uchicago.edu/~hytruongson/posters/AISTATS_2024_E3_Poster.pdf" class="card-link link-underline link-underline-opacity-0">Poster</a>
             </div>
           </div>
 
@@ -66,11 +66,11 @@
             <div class="card-body">
               <h5 class="card-title">Scalable Hierarchical Self-Attention with Learnable Hierarchy for Long-Range Interactions </h5>
               <h6 class="card-subtitle text-body-secondary"><strong>Thuan N.A. Trang*</strong>, Khang Nhat Ngo*, Hugo Sonnery*, Thieu N. Vo, Siamak Ravanbakhsh, Truong Son Hy</h6>
-              <p class="card-text text-secondary mb-0">- TMLR 2024</p>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Paper</a>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Abstract</a>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Code</a>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Video</a>
+              <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span> TMLR 2024</p>
+              <a href="https://openreview.net/pdf?id=qH4YFMyhce" class="card-link link-underline link-underline-opacity-0">Paper</a>
+              <a href="https://openreview.net/forum?id=qH4YFMyhce" class="card-link link-underline link-underline-opacity-0">Abstract</a>
+              <a href="https://www.overleaf.com/project/63f1a40939aeee61b43fe452" class="card-link link-underline link-underline-opacity-0">Code</a>
+              <a href="https://www.youtube.com/watch?v=WIq9e3doBNc" class="card-link link-underline link-underline-opacity-0">Video</a>
             </div>
           </div>
 
@@ -78,9 +78,9 @@
             <div class="card-body">
               <h5 class="card-title">Sequoia: Hierarchical Self-Attention Layer with Sparse Updates for Point Clouds and Long Sequences</h5>
               <h6 class="card-subtitle text-body-secondary">Hugo Sonnery*, <strong>Thuan N.A. Trang*</strong>, Thieu N. Vo, Siamak Ravanbakhsh, Truong Son Hy</h6>
-              <p class="card-text text-secondary mb-0">ICLR 2023 Workshop SNN</p>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Paper</a>
-              <a href="#" class="card-link link-underline link-underline-opacity-0">Poster</a>
+              <p class="card-text text-secondary mb-0"> <span class="blockquote-footer"></span> ICLR 2023 Workshop SNN</p>
+              <a href="http://people.cs.uchicago.edu/~hytruongson/Sequoia_ICLR_2023.pdf" class="card-link link-underline link-underline-opacity-0">Paper</a>
+              <a href="http://people.cs.uchicago.edu/~hytruongson/posters/ICLR_2023_Poster.pdf" class="card-link link-underline link-underline-opacity-0">Poster</a>
             </div>
           </div>
 
@@ -89,17 +89,17 @@
             <li class="list-group-item">
               <p class="blockquote mb-0 h6">Dr. Thieu N. Vo</p>
               <p class="mb-0">Lecturer & Researcher at TDTU, Research Fellow at NUS</p>
-              <p class="mb-0"> [<a class="link-underline link-underline-opacity-0" href="">Website</a>]   [<a class="link-underline link-underline-opacity-0" href="">Email</a>] </p>
+              <p class="mb-0"> [<a class="link-underline link-underline-opacity-0" href="https://fms.tdtu.edu.vn/en/people/phd-vo-ngoc-thieu">Website</a>]   [<a class="link-underline link-underline-opacity-0" href="mailto:thieuvo@nus.edu.sg">Email</a>] </p>
             </li>
             <li class="list-group-item">
               <p class="blockquote mb-0 h6">Prof. Truong Son Hy</p>
               <p class="mb-0">Assistant Professor at Indiana State University</p>
-              <p class="mb-0"> [<a class="link-underline link-underline-opacity-0" href="">Website</a>]   [<a class="link-underline link-underline-opacity-0" href="">Email</a>] </p>
+              <p class="mb-0"> [<a class="link-underline link-underline-opacity-0" href="http://people.cs.uchicago.edu/~hytruongson/">Website</a>]   [<a class="link-underline link-underline-opacity-0" href="mailto:TruongSon.Hy@indstate.edu">Email</a>] </p>
             </li>
             <li class="list-group-item">
               <p class="blockquotemb-0 h6">Prof. Siamak Ravanbakhsh</p>
               <p class="mb-0">Assistant Professor, McGill University, Canada CIFAR AI Chair</p>
-              <p class="mb-0"> [<a class="link-underline link-underline-opacity-0" href="">Website</a>]   [<a class="link-underline link-underline-opacity-0" href="">Email</a>] </p>
+              <p class="mb-0"> [<a class="link-underline link-underline-opacity-0" href="https://mila.quebec/en/person/siamak-ravanbakhsh/">Website</a>]   [<a class="link-underline link-underline-opacity-0" href="mailto:siamak@cs.mcgill.ca">Email</a>] </p>
             </li>
           </ul>
          
