--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span> TMLR 2024</p>
               <a href="https://openreview.net/pdf?id=qH4YFMyhce" class="card-link link-underline link-underline-opacity-0">Paper</a>
               <a href="https://openreview.net/forum?id=qH4YFMyhce" class="card-link link-underline link-underline-opacity-0">Abstract</a>
-              <a href="https://www.overleaf.com/project/63f1a40939aeee61b43fe452" class="card-link link-underline link-underline-opacity-0">Code</a>
+              <a href="https://github.com/HySonLab/HierAttention" class="card-link link-underline link-underline-opacity-0">Code</a>
               <a href="https://www.youtube.com/watch?v=WIq9e3doBNc" class="card-link link-underline link-underline-opacity-0">Video</a>
             </div>
           </div>
