--- a/index.html
+++ b/index.html
@@ -32,22 +32,32 @@
             <p class="mb-0"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="mailto:trangnguyenanhthuan@gmail.com">Email</a></p>
             <p class="mb-0"><i class="fab fa-fw fa-github" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://github.com/tranganhthuan">Github</a></p>
             <p class="mb-0"><i class="fas fa-fw fa-code" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://leetcode.com/u/trangnguyenanhthuan/">Leetcode</a></p>
-            <p class="mb-0"><i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://scholar.google.com.vn/citations?view_op=list_works&hl=vi&user=L-eZtsQAAAAJ">Scholar</a></p>
+            <p class="mb-0"><i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://scholar.google.com.vn/citations?user=L-eZtsQAAAAJ&hl=vi">Scholar</a></p>
           </div>
         </div>
         <div class="col-10 mt-2">
           <h2 class="text-dark-emphasis pb-3"> 🙌🏻 Hi, I’m Thuan! </h2>
-          
-          <p class="blockquote">👨🏻‍🎓 I have a Bachelor Degree in IT at RMIT University.</p>
-          <p class="blockquote">👨🏻‍💻 I was an AI Resident at FPT AIC.</p>
-          <p class="blockquote">🔬 My main research topic are 3D Vision, Generative Model, Language-Vision Modelling.</p>
-          <p class="blockquote">🎯 I’m currently seeking for PhD Position in this field.</p>
+          <div class="row">
+            <div class="col-6">
+              <p class="blockquote">👨🏻‍🎓 I have a Bachelor Degree in IT at RMIT University.</p>
+              <p class="blockquote">👨🏻‍💻 I was an AI Resident at FPT AIC.</p>
+              <p class="blockquote">🔬 My main research topic are 3D Vision, Generative Model, Language-Vision Modelling.</p>
+              <p class="blockquote">🎯 I’m currently seeking for PhD Position in this field.</p>
+            </div>   
+            <div class="col-6 border-start">
+              <p class="blockquote mb-0">📋 Other Information:</p>
+              <ul>
+                <li class="mb-1"><strong>Language:</strong> Vietnamese, English.</li>
+                <li class="mb-1"><strong>Programming tools:</strong> Pytorch, Numpy, Matplotlib, <br/> Torch Geometric, Plotly, Scikit Learn, Pandas.</li>
+                <li class="mb-1"><strong>Awards:</strong> 50% of Higher Education fees (RMIT), <br/> PhD Scholarship at A2I2 (Deakin).</li>
+              </ul>
+            </div>
+          </div> 
           <p class="blockquote text-secondary"> <span class="blockquote-footer"></span> Further Details: 
             [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/CV.pdf">CV</a>] 
             [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/IELTS.pdf">IELTS</a>] 
             [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/Scholarship.pdf">Scholarship</a>]  
-          </p>       
-
+          </p>   
           <h3 class="text-dark-emphasis pb-3"> 📚 Publications </h3>
 
           <div class="card">
@@ -69,7 +79,7 @@
               <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span> TMLR 2024</p>
               <a href="https://openreview.net/pdf?id=qH4YFMyhce" class="card-link link-underline link-underline-opacity-0">Paper</a>
               <a href="https://openreview.net/forum?id=qH4YFMyhce" class="card-link link-underline link-underline-opacity-0">Abstract</a>
-              <a href="https://github.com/HySonLab/HierAttention" class="card-link link-underline link-underline-opacity-0">Code</a>
+              <a href="https://www.overleaf.com/project/63f1a40939aeee61b43fe452" class="card-link link-underline link-underline-opacity-0">Code</a>
               <a href="https://www.youtube.com/watch?v=WIq9e3doBNc" class="card-link link-underline link-underline-opacity-0">Video</a>
             </div>
           </div>
