--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
               <p class="blockquote">👨🏻‍🎓 I have a Bachelor Degree in IT at RMIT University.</p>
               <p class="blockquote">👨🏻‍💻 I was an AI Resident at FPT AIC.</p>
               <p class="blockquote">🔬 My main research topic are 3D Vision, Generative Model, Language-Vision Modelling.</p>
-              <p class="blockquote">🎯 I’m currently seeking for PhD Position in this field.</p>
+              <p class="blockquote">🎯 I’m currently seeking for a PhD position or job in this field.</p>
             </div>   
             <div class="col-6 border-start">
               <p class="blockquote mb-0">📋 Other Information:</p>
               <ul>
                 <li class="mb-1"><strong>Language:</strong> Vietnamese, English.</li>
-                <li class="mb-1"><strong>Programming tools:</strong> Pytorch, Numpy, Matplotlib, <br/> Torch Geometric, Plotly, Scikit Learn, Pandas.</li>
+                <li class="mb-1"><strong>Programming tools:</strong> Pytorch, Numpy, Matplotlib, <br/> Torch Geometric, Plotly.</li>
                 <li class="mb-1"><strong>Awards:</strong> 50% of Higher Education fees (RMIT), <br/> PhD Scholarship at A2I2 (Deakin).</li>
               </ul>
             </div>
