Add certificates section

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/IELTS.pdf">IELTS</a>] 
             [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/Scholarship.pdf">Scholarship</a>]  
           </p>   
-          <h3 class="text-dark-emphasis pb-3"> 📚 Publications </h3>
 
+          <h3 class="text-dark-emphasis pb-3"> 📚 Publications </h3>
           <div class="card">
             <div class="card-body">
               <h5 class="card-title">E(3)-Equivariant Mesh Neural Networks</h5>
@@ -93,6 +93,35 @@
               <a href="http://people.cs.uchicago.edu/~hytruongson/posters/ICLR_2023_Poster.pdf" class="card-link link-underline link-underline-opacity-0">Poster</a>
             </div>
           </div>
+
+          <h3 class="text-dark-emphasis pb-3"> 🔖 Certificates </h3>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <p class="m-0 mt-2"><strong>Deep Learning Specialization</strong> <a class="text-dark"
+                href="https://coursera.org/share/88db1b4fe9546d40b6333e1eb1c74328"><small><span
+                        class="oi oi-external-link"></span></small></a></p>
+              <p class="m-0"><small>By Coursera</small></p>
+            </li>
+            <li class="list-group-item">
+              <p class="m-0 mt-2"><strong>Natural Language Processing Specialization</strong> <a class="text-dark"
+                href="https://coursera.org/share/fbcd4de5a3f31cb60599cce1939abdf0"><small><span
+                        class="oi oi-external-link"></span></small></a></p>
+              <p class="m-0"><small>By Coursera</small></p>
+            </li>
+            <li class="list-group-item">
+              <p class="m-0 mt-2"><strong>Machine Learning Scientist</strong> <a class="text-dark"
+                href="https://www.datacamp.com/statement-of-accomplishment/track/d236af947b4c7427f6c3637f81910ecdffb2b1a8"><small><span
+                        class="oi oi-external-link"></span></small></a></p>
+              <p class="m-0"><small>By DataCamp</small></p>
+            </li>
+            <li class="list-group-item">
+              <p class="m-0 mt-2"><strong>TensorFlow Developer Certificate</strong> (Expired) <a class="text-dark"
+                href="https://www.credential.net/40fa89b6-fd3b-426e-85f8-5b1cde295165#gs.ixnn5m"><small><span
+                        class="oi oi-external-link"></span></small></a></p>
+              <p class="m-0"><small>By Google Developers Certification</small></p>
+            </li>
+          </ul>
+
 
           <h3 class="text-dark-emphasis pt-3 pb-3 mb-0"> ✒️ References </h3>
           <ul class="list-group list-group-flush">
