Update certificates section

--- a/index.html
+++ b/index.html
@@ -94,31 +94,27 @@
             </div>
           </div>
 
-          <h3 class="text-dark-emphasis pb-3"> 🔖 Certificates </h3>
+          <h3 class="text-dark-emphasis pt-3 pb-3 mb-0">  🔖 Certificates </h3>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
-              <p class="m-0 mt-2"><strong>Deep Learning Specialization</strong> <a class="text-dark"
-                href="https://coursera.org/share/88db1b4fe9546d40b6333e1eb1c74328"><small><span
-                        class="oi oi-external-link"></span></small></a></p>
-              <p class="m-0"><small>By Coursera</small></p>
+              <p class="blockquote mb-0 h6">Large Language Model Agents - Mastery Tier</p>
+              <p class="m-0">By UC Berkeley - 2024 [<a class="link-underline link-underline-opacity-0" href="LLM_Agent_MOOC.pdf">Link</a>] </p>
             </li>
             <li class="list-group-item">
-              <p class="m-0 mt-2"><strong>Natural Language Processing Specialization</strong> <a class="text-dark"
-                href="https://coursera.org/share/fbcd4de5a3f31cb60599cce1939abdf0"><small><span
-                        class="oi oi-external-link"></span></small></a></p>
-              <p class="m-0"><small>By Coursera</small></p>
+              <p class="blockquote mb-0 h6">Natural Language Processing Specialization</p>
+              <p class="m-0">By Coursera - 2021 [<a class="link-underline link-underline-opacity-0" href="https://coursera.org/share/fbcd4de5a3f31cb60599cce1939abdf0">Link</a>] </p>
             </li>
             <li class="list-group-item">
-              <p class="m-0 mt-2"><strong>Machine Learning Scientist</strong> <a class="text-dark"
-                href="https://www.datacamp.com/statement-of-accomplishment/track/d236af947b4c7427f6c3637f81910ecdffb2b1a8"><small><span
-                        class="oi oi-external-link"></span></small></a></p>
-              <p class="m-0"><small>By DataCamp</small></p>
+              <p class="blockquote mb-0 h6">TensorFlow Developer Certificate (Expired)</p>
+              <p class="m-0">By Google Developers Certification - 2020 [<a class="link-underline link-underline-opacity-0" href="https://www.credential.net/40fa89b6-fd3b-426e-85f8-5b1cde295165#gs.ixnn5m">Link</a>] </p>
             </li>
             <li class="list-group-item">
-              <p class="m-0 mt-2"><strong>TensorFlow Developer Certificate</strong> (Expired) <a class="text-dark"
-                href="https://www.credential.net/40fa89b6-fd3b-426e-85f8-5b1cde295165#gs.ixnn5m"><small><span
-                        class="oi oi-external-link"></span></small></a></p>
-              <p class="m-0"><small>By Google Developers Certification</small></p>
+              <p class="blockquote mb-0 h6">Machine Learning Scientist</p>
+              <p class="m-0">By DataCamp - 2020 [<a class="link-underline link-underline-opacity-0" href="https://www.datacamp.com/statement-of-accomplishment/track/d236af947b4c7427f6c3637f81910ecdffb2b1a8">Link</a>] </p>
+            </li>
+            <li class="list-group-item">
+              <p class="blockquote mb-0 h6">Deep Learning Specialization</p>
+              <p class="m-0">By Coursera - 2019 [<a class="link-underline link-underline-opacity-0" href="https://coursera.org/share/88db1b4fe9546d40b6333e1eb1c74328">Link</a>] </p>
             </li>
           </ul>
 
