Add project section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <p class="mb-0"><i class="fa fa-fw fa-map-marker" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://maps.app.goo.gl/GCZDYThYj8mfrLxi7">Location</a></p>
             <p class="mb-0"><i class="fas fa-fw fa-envelope" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="mailto:trangnguyenanhthuan@gmail.com">Email</a></p>
             <p class="mb-0"><i class="fab fa-fw fa-github" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://github.com/tranganhthuan">Github</a></p>
-            <p class="mb-0"><i class="fas fa-fw fa-code" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://leetcode.com/u/trangnguyenanhthuan/">Leetcode</a></p>
+            <!-- <p class="mb-0"><i class="fas fa-fw fa-code" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://leetcode.com/u/trangnguyenanhthuan/">Leetcode</a></p> -->
             <p class="mb-0"><i class="fas fa-fw fa-graduation-cap" aria-hidden="true"></i><span class="px-1"></span><a class="link-underline link-underline-opacity-0 link-dark" href="https://scholar.google.com.vn/citations?user=L-eZtsQAAAAJ&hl=vi">Scholar</a></p>
           </div>
         </div>
@@ -94,11 +94,36 @@
             </div>
           </div>
 
+          <h3 class="text-dark-emphasis pb-3"> 📦 Projects </h3>
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Fine-tuning LLaMA on ChartQA with LoRA</h5>
+              <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span>2025</p>
+              <a href="https://github.com/tranganhthuan/Finetune_Llama_LoRA" class="card-link link-underline link-underline-opacity-0">Code</a>
+            </div>
+          </div>
+
+          <div class="card mt-2">
+            <div class="card-body">
+              <h5 class="card-title">Minimal Retrieval-Augmented Generation (RAG) Pipeline</h5>
+              <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span>2024</p>
+              <a href="https://github.com/tranganhthuan/RAG_Pipeline" class="card-link link-underline link-underline-opacity-0">Code</a>
+            </div>
+          </div>
+
+          <div class="card mt-2">
+            <div class="card-body">
+              <h5 class="card-title">Video Call Web App with Sign Language Detection</h5>
+              <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span>2024</p>
+              <a href="https://github.com/tranganhthuan/SignLanguageVideoCall" class="card-link link-underline link-underline-opacity-0">Code</a>
+            </div>
+          </div>
+
           <h3 class="text-dark-emphasis pt-3 pb-3 mb-0">  🔖 Certificates </h3>
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <p class="blockquote mb-0 h6">Large Language Model Agents - Mastery Tier</p>
-              <p class="m-0">By UC Berkeley - 2024 [<a class="link-underline link-underline-opacity-0" href="LLM_Agent_MOOC.pdf">Link</a>] </p>
+              <p class="m-0">By UC Berkeley - 2024 [<a class="link-underline link-underline-opacity-0" href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/LLM_Agent_MOOC.pdf">Link</a>] </p>
             </li>
             <li class="list-group-item">
               <p class="blockquote mb-0 h6">Natural Language Processing Specialization</p>
