Update projects section

--- a/index.html
+++ b/index.html
@@ -97,29 +97,27 @@
           <h3 class="text-dark-emphasis pb-3"> 📦 Projects </h3>
           <div class="card">
             <div class="card-body">
-              <h5 class="card-title">Fine-tuning LLaMA on ChartQA with LoRA</h5>
-              <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span>2025</p>
+              <h5 class="card-title">Fine-tuning LLaMA on ChartQA with LoRA <span class="card-text text-secondary blockquote-footer small">2025</span></h5>
               <a href="https://github.com/tranganhthuan/Finetune_Llama_LoRA" class="card-link link-underline link-underline-opacity-0">Code</a>
             </div>
           </div>
 
           <div class="card mt-2">
             <div class="card-body">
-              <h5 class="card-title">Minimal Retrieval-Augmented Generation (RAG) Pipeline</h5>
-              <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span>2024</p>
+              <h5 class="card-title">Minimal Retrieval-Augmented Generation (RAG) Pipeline <span class="card-text text-secondary blockquote-footer small">2024</span></h5>
               <a href="https://github.com/tranganhthuan/RAG_Pipeline" class="card-link link-underline link-underline-opacity-0">Code</a>
             </div>
           </div>
 
           <div class="card mt-2">
             <div class="card-body">
-              <h5 class="card-title">Video Call Web App with Sign Language Detection</h5>
-              <p class="card-text text-secondary mb-0"><span class="blockquote-footer"></span>2024</p>
+              <h5 class="card-title">Video Call Web App with Sign Language Detection <span class="card-text text-secondary blockquote-footer small">2024</span></h5>
               <a href="https://github.com/tranganhthuan/SignLanguageVideoCall" class="card-link link-underline link-underline-opacity-0">Code</a>
             </div>
           </div>
 
           <h3 class="text-dark-emphasis pt-3 pb-3 mb-0">  🔖 Certificates </h3>
+
           <ul class="list-group list-group-flush">
             <li class="list-group-item">
               <p class="blockquote mb-0 h6">Large Language Model Agents - Mastery Tier</p>
