--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div>
               <p class="text-start text-dark-emphasis h5">Trang N. A. Thuan</p>
               <figcaption class="blockquote-footer mt-1">
-                AI Researcher
+                AI Researcher/ Engineer
               </figcaption>
             </div>
             <div>
@@ -267,7 +267,7 @@
             <div>
               <p class="text-start text-dark-emphasis h5">Trang N. A. Thuan</p>
               <figcaption class="blockquote-footer mt-1">
-                AI Researcher
+                AI Researcher/ Engineer
               </figcaption>
             </div>
             <div>
