Update note positional embedding

--- a/index.html
+++ b/index.html
@@ -310,7 +310,13 @@
                   embedding of LLMs.</p>
               </div>
             </div>
-
+            <div class="card mt-2">
+              <div class="card-body">
+                <h5 class="card-title"><a class="card-link link-underline link-underline-opacity-0 link-dark"
+                    href="https://share.note.sx/4h82lbbg#EYeO61yAG2rIJFlCmkRyHRMckSlD/pv6JHrzZEf9Jyk">Positional Embedding</a></h5>
+                <p class="card-text text-secondary mb-0">An overview of various positional encoding methods used in large language models (LLMs) and their generalization for long-sequence inference.</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
