Fix bug references

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
     .custom-tab:hover {
       color: #212529;
     }
+
+    .no-before::before {
+      visibility: hidden;
+    }
   </style>
 </head>
 
@@ -65,7 +69,10 @@
             </div>
             <div>
               <p class="text-start text-dark-emphasis h5">Trang N. A. Thuan</p>
-              <figcaption class="blockquote-footer mt-1">
+              <figcaption class="blockquote-footer mt-1 mb-0">
+                PhD Student in CS
+              </figcaption>
+              <figcaption class="blockquote-footer mt-0 no-before">
                 AI Researcher/ Engineer
               </figcaption>
             </div>
@@ -102,7 +109,7 @@
                   <li class="mb-1"><strong>Programming tools:</strong> Pytorch, Numpy, Matplotlib, <br /> Torch
                     Geometric, Plotly.</li>
                   <li class="mb-1"><strong>Awards:</strong> 50% of Higher Education fees (RMIT), <br /> PhD Scholarship
-                    at A2I2 (Deakin).</li>
+                    at A2I2 (Deakin), <br /> PhD Scholarship at RMIT.</li>
                 </ul>
               </div>
             </div>
@@ -313,8 +320,10 @@
             <div class="card mt-2">
               <div class="card-body">
                 <h5 class="card-title"><a class="card-link link-underline link-underline-opacity-0 link-dark"
-                    href="https://share.note.sx/o6y4jesl#+ibJFCsRZaq+TjXRjTSxQdrWOFZoRjYL3GzO4Ti/o2o">Positional Embedding</a></h5>
-                <p class="card-text text-secondary mb-0">An overview of various positional encoding methods used in large language models (LLMs) and their generalization for long-sequence inference.</p>
+                    href="https://share.note.sx/o6y4jesl#+ibJFCsRZaq+TjXRjTSxQdrWOFZoRjYL3GzO4Ti/o2o">Positional
+                    Embedding</a></h5>
+                <p class="card-text text-secondary mb-0">An overview of various positional encoding methods used in
+                  large language models (LLMs) and their generalization for long-sequence inference.</p>
               </div>
             </div>
           </div>
