--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <li class="mb-1"><strong>Programming tools:</strong> Pytorch, Numpy, Matplotlib, <br /> Torch
                     Geometric, Plotly.</li>
                   <li class="mb-1"><strong>Awards:</strong> 50% of Higher Education fees (RMIT), <br /> PhD Scholarship
-                    at A2I2 (Deakin), <br /> PhD Scholarship at RMIT.</li>
+                    at A2I2 (Deakin), PhD Scholarship at RMIT.</li>
                 </ul>
               </div>
             </div>
