Update Awards in CV

--- a/index.html
+++ b/index.html
@@ -96,11 +96,11 @@
             <h2 class="text-dark-emphasis pb-3"> 🙌🏻 Hi, I'm Thuan! </h2>
             <div class="row">
               <div class="col-6">
-                <p class="blockquote">👨🏻‍🎓 I have a Bachelor Degree in IT at RMIT University.</p>
+                <p class="blockquote">👨🏻‍🎓 I am a PhD student in Computer Science at RMIT University.</p>
                 <p class="blockquote">👨🏻‍💻 I was an AI Resident at FPT AIC.</p>
                 <p class="blockquote">🔬 My main research topic are 3D Vision, Generative Model, Language-Vision
                   Modelling.</p>
-                <p class="blockquote">🎯 I'm currently seeking for a PhD position or job in this field.</p>
+                <p class="blockquote">🎯 I'm currently seeking for a job in this field.</p>
               </div>
               <div class="col-6 border-start">
                 <p class="blockquote mb-0">📋 Other Information:</p>
