Add Advanced_LLM_Agent_MOOC certificate.

--- a/index.html
+++ b/index.html
@@ -205,6 +205,12 @@
 
             <ul class="list-group list-group-flush">
               <li class="list-group-item">
+                <p class="blockquote mb-0 h6">Advanced Large Language Model Agents - Ninja Tier</p>
+                <p class="m-0">By UC Berkeley - 2024 [<a class="link-underline link-underline-opacity-0"
+                    href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/Advanced_LLM_Agent_MOOC.pdf">Link</a>]
+                </p>
+              </li>
+              <li class="list-group-item">
                 <p class="blockquote mb-0 h6">Large Language Model Agents - Mastery Tier</p>
                 <p class="m-0">By UC Berkeley - 2024 [<a class="link-underline link-underline-opacity-0"
                     href="https://github.com/tranganhthuan/tranganhthuan.github.io/blob/main/LLM_Agent_MOOC.pdf">Link</a>]
